fix: align domain search and transfer widget button size and shape
Style the Simple/Transfer widget submit buttons with btn classes and a
shared .rstore-domain-form layout so they match the React domain search
widget. Use display:contents on the input label so the field/button flex
layout lines up consistently.

--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -75,7 +75,7 @@
   display: flex;
 }
 .rstore-domain-search .form-container .search-form .search-field {
-  flex-grow: 4;
+  flex-grow: 1;
   -webkit-border-radius: 5px 0 0 5px;
   border-radius: 5px 0 0 5px;
   -webkit-box-sizing: border-box;
@@ -84,12 +84,15 @@
   border-right: 0;
 }
 .rstore-domain-search .form-container .search-form .search-submit {
-  flex-grow: 1;
   -webkit-border-radius: 0 5px 5px 0;
   border-radius: 0 5px 5px 0;
+  -webkit-appearance: none;
+  appearance: none;
+  box-sizing: border-box;
+  white-space: nowrap;
 }
 .rstore-domain-search .form-container .search-form .search-field, .rstore-domain-search .form-container .search-form .search-submit {
-  display: inline;
+  display: inline-block;
   margin: 0;
 }
 @media (min-width: 1200px) {
@@ -163,6 +166,34 @@
   margin: 0px;
   padding: 0px;
   white-space: pre-wrap;
+}
+
+.search-form.rstore-domain-form {
+  display: flex;
+}
+.search-form.rstore-domain-form label {
+  display: contents;
+}
+.search-form.rstore-domain-form .search-field {
+  flex-grow: 1;
+  -webkit-border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-right: 0;
+  display: inline-block;
+  margin: 0;
+}
+.search-form.rstore-domain-form .search-submit {
+  -webkit-border-radius: 0 5px 5px 0;
+  border-radius: 0 5px 5px 0;
+  -webkit-appearance: none;
+  appearance: none;
+  box-sizing: border-box;
+  white-space: nowrap;
+  display: inline-block;
+  margin: 0;
 }
 
 /**-------------------
